Rename title and der-gitarrenbausatz.de -> Der Gitarrenbausatz

--- a/src/pages/newsletter-validation.astro
+++ b/src/pages/newsletter-validation.astro
@@ -11,7 +11,7 @@ import Content from "../components/widgets/Content.astro";
 import Features2 from "../components/widgets/Features2.astro";
 
 const metadata = {
-  title: 'Varianten',
+  title: 'Newsletter Anmeldung',
 };
 ---
 
