change index title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import gitarreFoto3 from '../assets/images/guitar-00-mid-3.jpg';
 import CenteredImage from "../components/widgets/CenteredImage.astro";
 
 const metadata = {
-  title: 'Der Bausatz',
+  title: 'Unser Bausatz',
 };
 ---
 
