fix text for Franziska

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -44,7 +44,7 @@ const metadata = {
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight sm:text-3xl mb-2">Franziska Dill</h3>
       <span>Gitarrenbaumeisterin</span><br><br>
-      Musik wurde Franziska quasi in die Wiege gelegt. Seit 1995 baut sie sowohl klassische Gitarren als Stahlsaitengitarren und schloss 2004 ihre Meisterprüfung zur Gitarrenbauerin ab.
+      Musik wurde Franziska quasi in die Wiege gelegt. Seit 1995 baut sie sowohl klassische Gitarren als auch Stahlsaitengitarren und schloss 2004 ihre Meisterprüfung zur Gitarrenbauerin ab.
       2002 war dann der Startschuss für ihre eigene Gitarrenmarke. Weitere Infos und die aktuellen Modelle findet ihr unter
       <a class="inline-block hover:text-primary transition ease-in duration-200" href="http://franziska-koessl.de">franziska-koessl.de</a>.
     </Fragment>
