Add a button to copy current neck angle values as URL

--- a/src/pages/neck-angle.astro
+++ b/src/pages/neck-angle.astro
@@ -11,5 +11,5 @@ const metadata = {
 
 <Layout metadata={metadata}>
   <img src={neckangle.src} />
-  <StringHeight  client:visible/>
+  <StringHeight  client:only="react"/>
 </Layout>
